--- a/res.rc
+++ b/res.rc
@@ -1,2 +1,9 @@
 #include "res.h"
-RID_ICON ICON "icon.ico"
+RID_MENU MENU
+BEGIN
+    POPUP "&File"
+    BEGIN
+        MENUITEM "&New",RID_FILE_NEW
+        MENUITEM "&Open...",RID_FILE_OPEN
+    END
+END
