--- a/res.rc
+++ b/res.rc
@@ -1,2 +1,46 @@
 #include "res.h"
+#include <winuser.h>
 RID_ICON ICON "icon.ico"
+
+RID_FIND DIALOG LOADONCALL MOVEABLE DISCARDABLE 36, 44, 230, 94
+STYLE WS_BORDER | WS_CAPTION | DS_MODALFRAME | WS_POPUP | WS_SYSMENU | DS_3DLOOK
+CAPTION "Find And Replace"
+FONT 8, "MS Shell Dlg"
+BEGIN
+    LTEXT "&Find what:", -1, 4, 9, 48, 8
+    EDITTEXT RID_FIND_WHAT, 54, 7, 114, 12, WS_GROUP | WS_TABSTOP | ES_AUTOHSCROLL
+    LTEXT "&Replace with:", -1, 4, 26, 48, 8
+    EDITTEXT RID_FIND_WITH, 54, 24, 114, 12, WS_GROUP | WS_TABSTOP | ES_AUTOHSCROLL
+    AUTOCHECKBOX "Match &whole word only", RID_FIND_WHOLE, 5, 46, 104, 12, WS_GROUP
+    AUTOCHECKBOX "Match &case", RID_FIND_CASE, 5, 62, 59, 12
+    PUSHBUTTON "Find &Up", RID_FIND_PREVIOUS, 174, 4, 50, 14, WS_GROUP
+    PUSHBUTTON "Find &Down", RID_FIND_NEXT, 174, 21, 50, 14, WS_GROUP
+    PUSHBUTTON "&Replace", RID_FIND_REPLACE, 174, 38, 50, 14
+    PUSHBUTTON "Replace &All", RID_FIND_REPLACE_ALL, 174, 55, 50, 14
+END
+
+/*
+REPLACEDLGORD DIALOG LOADONCALL MOVEABLE DISCARDABLE 36, 44, 230, 94
+STYLE WS_BORDER | WS_CAPTION | DS_MODALFRAME | WS_POPUP | WS_SYSMENU |
+      DS_3DLOOK
+CAPTION "Replace"
+FONT 8, "MS Shell Dlg"
+BEGIN
+    LTEXT           "Fi&nd what:", -1, 4, 9, 48, 8
+    EDITTEXT        edt1, 54, 7, 114, 12, WS_GROUP | WS_TABSTOP | ES_AUTOHSCROLL
+
+    LTEXT           "Re&place with:", -1, 4, 26, 48, 8
+    EDITTEXT        edt2, 54, 24, 114, 12, WS_GROUP | WS_TABSTOP | ES_AUTOHSCROLL
+
+    AUTOCHECKBOX    "Match &whole word only", chx1, 5, 46, 104, 12, WS_GROUP
+    AUTOCHECKBOX    "Match &case", chx2, 5, 62, 59, 12
+
+    DEFPUSHBUTTON   "&Find Next", IDOK, 174, 4, 50, 14, WS_GROUP
+    PUSHBUTTON      "&Replace", psh1, 174, 21, 50, 14
+    PUSHBUTTON      "Replace &All", psh2, 174, 38, 50, 14
+    PUSHBUTTON      "Cancel", IDCANCEL, 174, 55, 50, 14
+    PUSHBUTTON      "&Help", pshHelp, 174, 75, 50, 14
+
+    LTEXT           "", stc1, 4, 76, 1, 1, NOT WS_VISIBLE
+END
+*/
