--- a/res.rc
+++ b/res.rc
@@ -13,8 +13,8 @@ BEGIN
     EDITTEXT RID_FIND_WITH, 54, 24, 114, 12, WS_GROUP | WS_TABSTOP | ES_AUTOHSCROLL
     AUTOCHECKBOX "Match &whole word only", RID_FIND_WHOLE, 5, 46, 104, 12, WS_GROUP
     AUTOCHECKBOX "Match &case", RID_FIND_CASE, 5, 62, 59, 12
-    PUSHBUTTON "Find &Up", RID_FIND_PREVIOUS, 174, 4, 50, 14, WS_GROUP
-    PUSHBUTTON "Find &Down", RID_FIND_NEXT, 174, 21, 50, 14, WS_GROUP
+    PUSHBUTTON "Find &Up", RID_FIND_UP, 174, 4, 50, 14, WS_GROUP
+    PUSHBUTTON "Find &Down", RID_FIND_DOWN, 174, 21, 50, 14, WS_GROUP
     PUSHBUTTON "&Replace", RID_FIND_REPLACE, 174, 38, 50, 14
     PUSHBUTTON "Replace &All", RID_FIND_REPLACE_ALL, 174, 55, 50, 14
 END
