find and replace

--- a/res.rc
+++ b/res.rc
@@ -11,12 +11,11 @@ BEGIN
     EDITTEXT RID_FIND_WHAT, 54, 7, 114, 12, WS_GROUP | WS_TABSTOP | ES_AUTOHSCROLL
     LTEXT "&Replace with:", -1, 4, 26, 48, 8
     EDITTEXT RID_FIND_WITH, 54, 24, 114, 12, WS_GROUP | WS_TABSTOP | ES_AUTOHSCROLL
-    AUTOCHECKBOX "Match &whole word only", RID_FIND_WHOLE, 5, 46, 104, 12, WS_GROUP
-    AUTOCHECKBOX "Match &case", RID_FIND_CASE, 5, 62, 59, 12
+    AUTOCHECKBOX "Match &case", RID_FIND_CASE, 5, 46, 59, 12
     PUSHBUTTON "Find &Up", RID_FIND_UP, 174, 4, 50, 14, WS_GROUP
     PUSHBUTTON "Find &Down", RID_FIND_DOWN, 174, 21, 50, 14, WS_GROUP
-    PUSHBUTTON "&Replace", RID_FIND_REPLACE, 174, 38, 50, 14
-    PUSHBUTTON "Replace &All", RID_FIND_REPLACE_ALL, 174, 55, 50, 14
+    PUSHBUTTON "&Replace", RID_REPLACE, 174, 38, 50, 14
+    PUSHBUTTON "Replace &All", RID_REPLACE_ALL, 174, 55, 50, 14
 END
 
 /*
