--- a/res.rc
+++ b/res.rc
@@ -1,5 +1,6 @@
+#include <windows.h>
 #include "res.h"
-#include <winuser.h>
+
 RID_ICON ICON "icon.ico"
 
 RID_FIND DIALOG LOADONCALL MOVEABLE DISCARDABLE 36, 44, 230, 94
@@ -16,4 +17,33 @@ BEGIN
     PUSHBUTTON "Find &Down", RID_FIND_DOWN, 174, 21, 50, 14, WS_GROUP
     PUSHBUTTON "&Replace", RID_REPLACE, 174, 38, 50, 14
     PUSHBUTTON "Replace &All", RID_REPLACE_ALL, 174, 55, 50, 14
+END
+
+1 VERSIONINFO
+FILEVERSION VERSION_DIGITALVALUE
+PRODUCTVERSION VERSION_DIGITALVALUE
+FILEFLAGSMASK 0x3fL
+FILEFLAGS 0
+FILEOS VOS_NT_WINDOWS32
+FILETYPE VFT_APP
+FILESUBTYPE VFT2_UNKNOWN
+BEGIN
+    BLOCK "VarFileInfo"
+    BEGIN
+        VALUE "Translation", 0x409, 1200
+    END
+    BLOCK "StringFileInfo"
+    BEGIN
+        BLOCK "040904b0"
+        BEGIN
+            VALUE    "CompanyName",        "Dark Software\0"
+            VALUE    "FileDescription",    "DarkPad\0"
+            VALUE    "FileVersion",        VERSION_VALUE
+            VALUE    "InternalName",       "darkpad.exe\0"
+            VALUE    "LegalCopyright",     "cc0\0"
+            VALUE    "OriginalFilename",   "darkpad.exe\0"
+            VALUE    "ProductName",        "DarkPad\0"
+            VALUE    "ProductVersion",     VERSION_VALUE
+        END
+    END
 END
