2 improvements: installer now adds darkpad to open with menu in file explorer for several file extensions. files without any newlines are now opened as CRLF.

--- a/installerres.rc
+++ b/installerres.rc
@@ -3,3 +3,4 @@ RID_ICON ICON "icon.ico"
 RID_DARKPAD RCDATA "darkpad.exe"
 RID_UNINSTALLER RCDATA "uninstaller.exe"
 RID_FONT RCDATA "font"
+CREATEPROCESS_MANIFEST_RESOURCE_ID RT_MANIFEST "installer.exe.manifest"
